Stackless-Python News
+++++++++++++++++++++

This file documents changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.


What's New in Stackless 2.7.x?
==============================

*Release date: 20XX-XX-XX*

- https://bitbucket.org/stackless-dev/stackless/issue/79
  Add __all__ to module stackless. Add entries to the module's __dict__
  for the computed properties (i.e. current, main, ...). This helps IDEs
  (PyDev) to recognise the expression "stackless.current" as a defined name.
  Fixed tasklet.raise_exception and channel.send_exception to raise a correct
  TypeError, if called without arguments.

- https://bitbucket.org/stackless-dev/stackless/issue/77
  Fix a NULL pointer exception, if a call to stackless.tasklet() fails
  (i.e. called with invalid arguments).

What's New in Stackless 2.7.9?
==============================

*Release date: 2015-02-07*

- Mac and Windows installers only: update openssl to version 1.0.1l

- https://bitbucket.org/stackless-dev/stackless/issue/60
  Fix a crash

What's New in Stackless 2.7.7 and 2.7.8
=======================================

*Release date: 2014-07-06*

- Fix for test_watchdog_on_tasklet_hard due to re !!!. The caching behaviour
  of re.py was changed in debug mode, which influenced the number of opcodes
  spent in our test.

- Fix compiler warnings found on MAC.

- https://bitbucket.org/stackless-dev/stackless/issue/61
  Fix a crash after unpickling hard switched tasklet. It is now
  always possible to inspect the local variables (frame.f_locals)
  of an unpickled frame object.

What's New in Stackless 2.7.6r3?
================================

*Release date: 2014-03-11*

- Remove various changes that are do not belong to mainline v2.7.6 Python
  and do not belong in the Stackless patch.

What's New in Stackless 2.7.6r2?
================================

*Release date: 2014-03-03*

- Fix channel and tasklet initialization.  Initialization is now done
  using __init__ methods.