@@ -230,6 +230,28 @@ class TestCrashUponFrameUnpickling(StacklessTestCase):
 
         self.assertIsInstance(f_locals, dict)
 
+
+class TestShutdown(StacklessTestCase):
+    def test_cstack_new(self):
+        # test for issue #80 https://bitbucket.org/stackless-dev/stackless/issues/80/
+        import subprocess
+        rc = subprocess.call([sys.executable, "-E", "-c", """if 1:
+            import stackless, sys
+
+            def func():
+                global channel
+                assert stackless.current.nesting_level == 0
+                assert apply(lambda : stackless.current.nesting_level) == 1, "apply does not recurse"
+                apply(channel.receive)  # crash at nesting level 1
+
+            channel = stackless.channel()
+            task = stackless.tasklet().bind(func, ())  # simplest tasklet
+            task.run()
+            sys.exit(42)
+            """])
+        self.assertEqual(rc, 42)
+
+
 if __name__ == '__main__':
     if not sys.argv[1:]:
         sys.argv.append('-v')
